--- a/Cosmetics_and_Skincare.html
+++ b/Cosmetics_and_Skincare.html
@@ -28,6 +28,20 @@
         </nav>   
         <a class="Purchse-Button" href="Order Page.html">Purchase Items</a>      
   </header>
+  <section class="SKin_Care_Products">
+    <table>
+        <tr>
+            <th>Product</th>
+            <th>Brand</th>
+            <th>Product Details</th>
+            <th>Price</th>
+        </tr>
+        <tr>
+            <td><img src="Photos/Product images/Full Fiber Shampoo.png" alt=""></td>
+        </tr>
+    </table>
+
+  </section>
 
 
 
@@ -41,7 +55,7 @@
 
 
 
-  
+
   <footer>
         <!--Here in the footer tag i have used 'P' instead of using the heading tag which is 'H1, H2 ,H3 & etc', the reason for that is because
         once i use a 'H' tag by default a padding gets added around the text so that the length of the footer and the design gets cluttered even though
