--- a/Cosmetics_and_Skincare.html
+++ b/Cosmetics_and_Skincare.html
@@ -37,7 +37,19 @@
             <th>Price</th>
         </tr>
         <tr>
-            <td><img src="Photos/Product images/Full Fiber Shampoo.png" alt=""></td>
+            <td><img src="Photos/Product images/Full Fiber Shampoo.png"></td>
+            <td><h4>Trsemme</h4></td>
+            <td><p>Enhance hair's volume and body with our ultimate volumizing system, part of the new TRESemmé Pro Collection. Our Full Fiber Volume system, infused with Collagen and Peptide Complex™, is designed to deliver lightweight hydration and enhanced grip for lift & body that can be zhuzhed up throughout the day.</p></td>
+        </tr>
+        <tr>
+            <td><img src="Photos/Product images/Full Fiber Conditioner.png"></td>
+            <td><h4>Trsemme</h4></td>
+            <td><p>Enhance hair's volume and body with our ultimate volumizing system, part of the new TRESemmé Pro Collection. Our Full Fiber Volume system, infused with Collagen and Peptide Complex™, is designed to deliver lightweight hydration and enhanced grip for lift & body that can be zhuzhed up throughout the day.</p></td>
+        </tr>
+        <tr>
+            <td><img src="Photos/Product images/Coconut Oil.png"></td>
+            <td><h4>Trsemme</h4></td>
+            <td><p>Enhance hair's volume and body with our ultimate volumizing system, part of the new TRESemmé Pro Collection. Our Full Fiber Volume system, infused with Collagen and Peptide Complex™, is designed to deliver lightweight hydration and enhanced grip for lift & body that can be zhuzhed up throughout the day.</p></td>
         </tr>
     </table>
 
