--- a/Cosmetics_and_Skincare.html
+++ b/Cosmetics_and_Skincare.html
@@ -37,19 +37,22 @@
             <th>Price</th>
         </tr>
         <tr>
-            <td><img src="Photos/Product images/Full Fiber Shampoo.png"></td>
+            <td class="Shampoo_Img"><img src="Photos/Product images/Full Fiber Shampoo.png"></td>
             <td><h4>Trsemme</h4></td>
-            <td><p>Enhance hair's volume and body with our ultimate volumizing system, part of the new TRESemmé Pro Collection. Our Full Fiber Volume system, infused with Collagen and Peptide Complex™, is designed to deliver lightweight hydration and enhanced grip for lift & body that can be zhuzhed up throughout the day.</p></td>
+            <td class="Fiber_Shampoo_Content"><p>Enhance hair's volume and body with our ultimate volumizing system, part of the new TRESemmé Pro Collection. Our Full Fiber Volume system, infused with Collagen and Peptide Complex™, is designed to deliver lightweight hydration and enhanced grip for lift & body that can be zhuzhed up throughout the day.</p></td>
+            <td><h4>Rs. 5000</h4></td>
         </tr>
         <tr>
-            <td><img src="Photos/Product images/Full Fiber Conditioner.png"></td>
+            <td class="Shampoo_Img"><img src="Photos/Product images/Full Fiber Conditioner.png"></td>
             <td><h4>Trsemme</h4></td>
-            <td><p>Enhance hair's volume and body with our ultimate volumizing system, part of the new TRESemmé Pro Collection. Our Full Fiber Volume system, infused with Collagen and Peptide Complex™, is designed to deliver lightweight hydration and enhanced grip for lift & body that can be zhuzhed up throughout the day.</p></td>
+            <td class="Fiber_Shampoo_Content"><p>Enhance hair's volume and body with our ultimate volumizing system, part of the new TRESemmé Pro Collection. Our Full Fiber Volume system, infused with Collagen and Peptide Complex™, is designed to deliver lightweight hydration and enhanced grip for lift & body that can be zhuzhed up throughout the day.</p></td>
+            <td><h4>Rs. 4500</h4></td>
         </tr>
         <tr>
-            <td><img src="Photos/Product images/Coconut Oil.png"></td>
-            <td><h4>Trsemme</h4></td>
-            <td><p>Enhance hair's volume and body with our ultimate volumizing system, part of the new TRESemmé Pro Collection. Our Full Fiber Volume system, infused with Collagen and Peptide Complex™, is designed to deliver lightweight hydration and enhanced grip for lift & body that can be zhuzhed up throughout the day.</p></td>
+            <td class="Shampoo_Img"><img src="Photos/Product images/Coconut Oil.png"></td>
+            <td ><h4>Trsemme</h4></td>
+            <td class="Fiber_Shampoo_Content"><p>Enhance hair's volume and body with our ultimate volumizing system, part of the new TRESemmé Pro Collection. Our Full Fiber Volume system, infused with Collagen and Peptide Complex™, is designed to deliver lightweight hydration and enhanced grip for lift & body that can be zhuzhed up throughout the day.</p></td>
+            <td><h4>Rs. 3000</h4></td>
         </tr>
     </table>
 
