made changes in the cosmetics page and linked the cosmetics pages to all other pages

--- a/Dairy Products.html
+++ b/Dairy Products.html
@@ -19,7 +19,7 @@
                     <ul class="dropdown">
                         <li><a href="Dairy Products.html">Diary Products</a></li>
                         <li><a href="Vegetables.html">Vegetables</a></li>
-                        <li><a href="#">Unknown</a></li>
+                        <li><a href="Cosmetics_and_Skincare.html">Cosmetics & Skincare</a></li>
                     </ul>
                 </li>
                 <li><a href="Order Page.html"">Order Page</a></li>
