added stylings to the table in cosmetics page

--- a/Cosmetics_and_Skincare.html
+++ b/Cosmetics_and_Skincare.html
@@ -29,43 +29,43 @@
         <a class="Purchse-Button" href="Order Page.html">Purchase Items</a>      
   </header>
   <section class="Hair_Care_Products">
-    <div class="Section-Alignment">
-            <h3 class="Hair_Product_Heading">Nourish Your Hair: Shampoo Collection</h3>
-            <table>
-                <tr>
-                    <th class="Table_size">Product Name</th>
-                    <th class="Table_size2">Product Image</th>
-                    <th>Brand</th>
-                    <th>Product Details</th>
-                    <th class="Shampoo_Price">Price</th>
-                </tr>
-                <tr>
-                    <td><h4>Full Fiber Shampoo</h4></td>
-                    <td><img class="Shampoo_Img" src="Photos/Product images/Full Fiber Shampoo.png"></td>
-                    <td class="Brand"><h4>Tresemme</h4></td>
-                    <td class="Fiber_Shampoo_Content"><p>Enhance hair's volume and body with our ultimate volumizing system, part of the new TRESemmé Pro Collection. Our Full Fiber Volume system, infused with Collagen and Peptide Complex™, is designed to deliver lightweight hydration and enhanced grip for lift & body that can be zhuzhed up throughout the day.</p></td>
-                    <td><h4>Rs. 5000</h4><a class="Buybutton" href="Order Page.html">Buy Now</a></td>
-                </tr>
-                <tr>
-                    <td><h4>Full Fiber Conditioner</h4></td>
-                    <td><img class="Shampoo_Img" src="Photos/Product images/Full Fiber Conditioner.png"></td>
-                    <td class="Brand"><h4>Tresemme</h4></td>
-                    <td class="Fiber_Shampoo_Content"><p>Enhance hair's volume and body with our ultimate volumizing system, part of the new TRESemmé Pro Collection. Our Full Fiber Volume system, infused with Collagen and Peptide Complex™, is designed to deliver lightweight hydration and enhanced grip for lift & body that can be zhuzhed up throughout the day.</p></td>
-                    <td><h4>Rs. 4500</h4><a class="Buybutton" href="Order Page.html">Buy Now</a></td>
-                </tr>
-                <tr>
-                    <td><h4>Coconut Oil</h4></td>
-                    <td><img class="Shampoo_Img" src="Photos/Product images/Coconut Oil.png"></td>
-                    <td class="Brand"><h4>Tresemme</h4></td>
-                    <td class="Fiber_Shampoo_Content"><p>Enhance hair's volume and body with our ultimate volumizing system, part of the new TRESemmé Pro Collection. Our Full Fiber Volume system, infused with Collagen and Peptide Complex™, is designed to deliver lightweight hydration and enhanced grip for lift & body that can be zhuzhed up throughout the day.</p></td>
-                    <td><h4>Rs. 3000</h4><a class="Buybutton" href="Order Page.html">Buy Now</a></td>
-                </tr>
-            </table>
-    </div>
+            <div class="Section-Alignment">
+                    <h3 class="Hair_Product_Heading">Nourish Your Hair: Shampoo Collection</h3>
+                    <table class="Cosmetics_Table">
+                        <tr>
+                            <th class="Table_size">Product Name</th>
+                            <th class="Table_size_2">Product Image</th>
+                            <th>Brand</th>
+                            <th>Product Details</th>
+                            <th class="Shampoo_Price">Price</th>
+                        </tr>
+                        <tr>
+                            <td><h4>Full Fiber Shampoo</h4></td>
+                            <td><img class="Shampoo_Img" src="Photos/Product images/Full Fiber Shampoo.png"></td>
+                            <td class="Brand"><h4>Tresemme</h4></td>
+                            <td class="Fiber_Shampoo_Content"><p>Enhance hair's volume and body with our ultimate volumizing system, part of the new TRESemmé Pro Collection. Our Full Fiber Volume system, infused with Collagen and Peptide Complex™, is designed to deliver lightweight hydration and enhanced grip for lift & body that can be zhuzhed up throughout the day.</p></td>
+                            <td><h4>Rs. 5000</h4><a class="Buybutton" href="Order Page.html">Buy Now</a></td>
+                        </tr>
+                        <tr>
+                            <td><h4>Full Fiber Conditioner</h4></td>
+                            <td><img class="Shampoo_Img" src="Photos/Product images/Full Fiber Conditioner.png"></td>
+                            <td class="Brand"><h4>Tresemme</h4></td>
+                            <td class="Fiber_Shampoo_Content"><p>Enhance hair's volume and body with our ultimate volumizing system, part of the new TRESemmé Pro Collection. Our Full Fiber Volume system, infused with Collagen and Peptide Complex™, is designed to deliver lightweight hydration and enhanced grip for lift & body that can be zhuzhed up throughout the day.</p></td>
+                            <td><h4>Rs. 4500</h4><a class="Buybutton" href="Order Page.html">Buy Now</a></td>
+                        </tr>
+                        <tr>
+                            <td><h4>Coconut Oil</h4></td>
+                            <td><img class="Shampoo_Img" src="Photos/Product images/Coconut Oil.png"></td>
+                            <td class="Brand"><h4>Tresemme</h4></td>
+                            <td class="Fiber_Shampoo_Content"><p>Enhance hair's volume and body with our ultimate volumizing system, part of the new TRESemmé Pro Collection. Our Full Fiber Volume system, infused with Collagen and Peptide Complex™, is designed to deliver lightweight hydration and enhanced grip for lift & body that can be zhuzhed up throughout the day.</p></td>
+                            <td><h4>Rs. 3000</h4><a class="Buybutton" href="Order Page.html">Buy Now</a></td>
+                        </tr>
+                    </table>
+            </div>
     <section>
         <div class="Section-Alignment">
             <h3 class="Makeup_Product_Heading">Enhance Your Beauty: Makeup Essentials</h3>
-            <table>
+            <table class="Cosmetics_Table">
                 <tr>
                     <th class="Table_size2">Product Name</th>
                     <th class="Table_size3">Product Image</th>
@@ -78,28 +78,28 @@
                     <td class="Makup_Img_size_adjustment"><img class="Makup_Img_size_adjustment" src="Photos/Product images/FitMe Mat Plus.png"></td>
                     <td class="Brand"><h4>Maybelline</h4></td>
                     <td><p>Fit Me® Matte + Poreless Foundation face makeup. This lightweight foundation mattifies and refines pores and leaves a natural, seamless finish.</p></td>
-                    <td><h4>Rs. 3000</h4></td>
+                    <td><h4>Rs. 3000</h4><a class="Buybutton" href="Order Page.html">Buy Now</a></td>
                 </tr>
                 <tr>
                     <td><h4>Full Fiber Shampoo</h4></td>
                     <td class="Makup_Img_size_adjustment"><img class="Makup_Img_size_adjustment" src="Photos/Product images/Instant Age Rewind Eraser.png" alt=""></td>
                     <td class="Brand"><h4>Maybelline</h4></td>
                     <td><p>Instant Eraser is the do-it-all concealer that moisturizes too! This multi-use concealer does it all: hydrates, conceals, contours and corrects in a click! Get up to 12 hours of moisturizing wear for crease-resistant coverage and a sponge tip applicator. Instant Eraser is vegan, non comedogenic, and formulated without mineral oil, parabens or talc.</p></td>
-                    <td><h4>Rs. 3250</h4></td>
+                    <td><h4>Rs. 3250</h4><a class="Buybutton" href="Order Page.html">Buy Now</a></td>
                 </tr>
                 <tr>
                     <td><h4>Full Fiber Shampoo</h4></td>
                     <td class="Makup_Img_size_adjustment"><img class="Makup_Img_size_adjustment" src="Photos/Product images/Maybelline Mascara.png" alt=""></td>
                     <td class="Brand"><h4>Maybelline</h4></td>
                     <td><p> Lengthening and volumizing mascara for Sky High lash impact from every angle. Long lasting mascara delivers limitless length and full volume.</p></td>
-                    <td><h4>Rs. 4000</h4></td>
+                    <td><h4>Rs. 4000</h4><a class="Buybutton" href="Order Page.html">Buy Now</a></td>
                 </tr>
                 <tr>
                     <td><h4>Full Fiber Shampoo</h4></td>
                     <td class="Makup_Img_size_adjustment"><img class="Makup_Img_size_adjustment" src="Photos/Product images/Color Sensational.png" alt=""></td>
                     <td class="Brand"><h4>Maybelline</h4></td>
                     <td><p>Dubbed Best Classic Red Lipstick Shade of 2020 in the Allure Best of Beauty Awards. Made For All Lipstick makeup features specially selected and obsessively tested pigments that make these universal lipstick shades looks sensational on all complexions.</p></td>
-                    <td><h4>Rs. 4850</h4></td>
+                    <td><h4>Rs. 4850</h4><a class="Buybutton" href="Order Page.html">Buy Now</a></td>
             </table>
 
         </div>
