--- a/Home.html
+++ b/Home.html
@@ -41,7 +41,7 @@
             <hr class="Fresh-Product-Section-line-Seperation">
             <p>Explore our Fresh Products section, where you'll find a delightful assortment of locally sourced fruits, vegetables, meats, and dairy, carefully selected to ensure optimal freshness and quality. From crisp, seasonal produce to succulent cuts of meat and creamy artisanal cheeses, we offer an inviting array of ingredients to elevate your culinary creations. With our commitment to freshness and flavor, rest assured that each item in our Fresh Products section is handpicked to deliver a taste of farm-fresh goodness straight to your table.</p><br>          
             <div class="Fresh-Products-Grid">
-                <img class="Appleimg"  src="Photos/Product images/Apple.jpg">
+                <img class="Appleimg"  src="Photos/Product images/Apple_2.jpg">
                 <img class="Pepperimg"  src="Photos/Product images/Bell Pepper.jpg">
                 <img class="Radishimg" src="Photos/Product images/Radish.jpg">
                 <img class="Pomegranatesimg" src="Photos/Product images/Pomegranates.jpg">
