--- a/Vegetables.html
+++ b/Vegetables.html
@@ -59,7 +59,7 @@
             </div>
             <div class="Vegetables-Content2">
                 <img class="Broccoli-Img" src="Photos/Product images/Broccoli.jpg" alt="Broccoli">
-                <img class="BellPepper-Img" src="Photos/Product images/Bell Pepper.jpg" alt=" Bell Pepper">
+                <img class="BellPepper-Img" src="Photos/Product images/Bell Pepper_2.jpg" alt=" Bell Pepper">
                 <img class="Cucumbers-Img" src="Photos/Product images/Cucumbers.jpg" alt="Cucumbers">  
                 <h3 class="Veg-Content">Broccoli (500g)<br>Rs.580<br><br><a class="Buybutton" href="Order Page.html">Buy Now</a></h3>
                 <h3 class="Veg-Content">Bell Pepper (500g)<br>Rs.430<br><br><a class="Buybutton" href="Order Page.html">Buy Now</a></h3>
