changed images in the home page and added some stylings for the cosmetics and about us page

--- a/Cosmetics_and_Skincare.html
+++ b/Cosmetics_and_Skincare.html
@@ -69,7 +69,7 @@
                 <tr>
                     <th class="Table_size2">Product Name</th>
                     <th class="Table_size3">Product Image</th>
-                    <th>Brand</th>
+                    <th class="Brand_Cos_Table">Brand</th>
                     <th>Product Details</th>
                     <th class="Shampoo_Price2">Price</th>
                 </tr>
