checked with indentation of all pages and added main tag

--- a/About.html
+++ b/About.html
@@ -23,84 +23,85 @@
                 </ul>
             </li>
             <li><a href="Order Page.html"">Order Page</a></li>
-            <li><a href="">Loyalty Registration</a></li>
+            <li><a href="Loyalty_Registration.html">Loyalty Registration</a></li>
             </ul>
         </nav>
-        <a class="Purchse-Button" href="Order Page.html">Purchase Items</a>  
-            
+        <a class="Purchse-Button" href="Order Page.html">Purchase Items</a>    
   </header>
-  <section class="About-Us-Main-Section">
-        <div class="About-Us-Page-Alignment">
-            <h1><strong>About Us</strong></h1>
-            <p>Welcome to Prime Grocery, your premier destination for all your grocery needs! At Prime Grocery, we are dedicated to offering top-quality products and exceptional services to make your shopping experience seamless and enjoyable.</p>
-            <p2>Established with a passion for excellence and a commitment to customer satisfaction, Prime Grocery has quickly become a trusted name in the community. Whether you're looking for fresh produce, pantry staples, or specialty items, we've got everything you need under one roof.What sets us apart is our comprehensive range of services designed to cater to your every need</p2>
-                <ul>
-                    <li> <p3><b>Delivery Services:</b>We understand the importance of convenience in today's fast-paced world. That's why we offer reliable delivery services straight to your doorstep. Simply place your order online, and our team will ensure your groceries are delivered promptly and efficiently.</p3></li>
-                    <li><p4><b>Catering:</b> Planning a party or event? Let Prime Grocery handle the catering for you! Our experienced chefs can create mouthwatering dishes and platters tailored to your preferences, leaving you free to enjoy your special occasion without any hassle.</p4></li>
-                    <li><p5><b>Party Planning:</b> From birthdays to weddings, our party planning services have you covered. Our dedicated team will work with you to bring your vision to life, handling everything from venue selection to decor and entertainment, ensuring a memorable and stress-free event.</p5></li>
-                    <li><p6><b>Online Ordering:</b>Skip the lines and shop from the comfort of your home with our easy-to-use online ordering platform. Browse our extensive selection, add items to your cart, and enjoy the convenience of doorstep delivery-it's shopping made simple!</p6></li>
-                    <li><p7><b>Loyalty Program:</b>We believe in rewarding our loyal customers. Join our loyalty program to earn points with every purchase, unlock exclusive discounts, and enjoy special perks as a valued member of the Prime Grocery family.</p7></li>
-                </ul>
-            <p8>At Prime Grocery, we are committed to providing exceptional products, services, and experiences that exceed your expectations. Whether you're stocking up on essentials for the week or planning a special celebration, we're here to serve you.</p8>
-            <hr class="Line-Seperation ">        
-        </div>      
-  </section>
-  <section class="Branch-Images">
-        <h1><strong>Branches</strong></h1>
-        <ol>
-            <li><h3>Colombo</h3></li>
-                <img class="CMB-Branch-Img" src="Photos/Branch Photos/Branch1.jpg" alt="Colombo Branch"><br>
-                <br>
-                <div class="Colombo-Branch-Section">
-                    <iframe  class="Colombo-Map-Link" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d506978.00417330104!2d79.2514876890625!3d6.9185953!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ae2596d3cb8fe07%3A0x2b0ae2edd563a661!2sAsia%20Pacific%20Institute%20of%20Information%20Technology%20(APIIT)!5e0!3m2!1sen!2slk!4v1714109951358!5m2!1sen!2slk"></iframe>
-                    <p1 class="CMB-Branch-Message">Welcome to our prestigious supermarket, a trailblazer in the center of the busy streets of Colombo. Since the beginning, we have dedicated ourselves to giving our clients the best possible quality and convenience. As the first supermarket in the city, we've established the benchmark for quality in retail by providing a wide range of goods that are specifically designed to satisfy the various demands of our energetic neighborhood. We are still recognized as the mainstay of Colombo shopping thanks to our history of innovation and client delight. Enter our store to join us on this historic voyage.</p1>
-                </div>
-                <li><h3>Kandy</h3></li>
-                <img class="Kandy-Branch-Img" src="Photos/Branch Photos/Branch2.jpg" alt="KandyBranch"><br>
-                <br>
-                <div class="Kandy-Branch-Section">
-                    <iframe class="Kandy-Map-Link" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15830.584391809452!2d80.6200415!3d7.2810475!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ae3673f5e22ab3b%3A0xcbaef11262bec73!2sAPIIT%20Kandy%20Campus!5e0!3m2!1sen!2slk!4v1714109569791!5m2!1sen!2slk"></iframe>
-                    <p2 class="Kandy-Branch-Message">Explore the charm of our second location, which carries on the tradition of our original store in Colombo and is tucked away in the charming city of Kandy. Encircled by verdant hills and the distinct cultural allure of the area, our Kandy location provides a sophisticated retail encounter within stunning surroundings. As soon as you enter our store, you'll discover a carefully chosen assortment of high-end goods made to satisfy the various demands of our discriminating clientele. With the same commitment to convenience and quality that characterizes our brand, we cordially invite you to visit our Kandy location and take part in a unique shopping experience.</p2>
-                </div>   
-        </ol>
- </section>
- <section class="Summary-Table-content">
-        <hr class="Line-Seperation">
-        <h1><strong>Summary Table</strong></h1>
-        <table>
-            <tr>
-                <th>Services</th>
-                <th>Description</th>
-                <th>Availability</th>      
-            </tr>
-            <tr>
-                <td>Delivery</td>
-                <td>We offer convenient delivery services to your doorstep, ensuring you get your groceries on time.</td>
-                <td>Monday-Sunday</td>
-            </tr>
-            <tr>
-                <td>Catering</td>
-                <td>Let us handle your event catering needs, from small gatherings to large parties and events.</td>
-                <td>By appointment only</td>
-            </tr>
-            <tr>
-                <td>Party Planning</td>
-                <td>Our experienced team can assist you in planning and organizing your special events and parties.</td>
-                <td>Available upon request</td>
-            </tr>
-            <tr>
-                <td>Online Ordering</td>
-                <td>Shop from the comfort of your home with our user-friendly online ordering platform.</td>
-                <td>24/7</td>
-            </tr>
-            <tr>
-                <td>Loyalty Program</td>
-                <td>Join our loyalty program to earn rewards, discounts, and exclusive offers with every purchase.</td>
-                <td>Ongoing</td>
-            </tr>       
-        </table>
- </section>
- <footer>
+  <main>
+        <section class="About-Us-Main-Section">
+            <div class="About-Us-Page-Alignment">
+                <h1><strong>About Us</strong></h1>
+                <p>Welcome to Prime Grocery, your premier destination for all your grocery needs! At Prime Grocery, we are dedicated to offering top-quality products and exceptional services to make your shopping experience seamless and enjoyable.</p>
+                <p2>Established with a passion for excellence and a commitment to customer satisfaction, Prime Grocery has quickly become a trusted name in the community. Whether you're looking for fresh produce, pantry staples, or specialty items, we've got everything you need under one roof.What sets us apart is our comprehensive range of services designed to cater to your every need</p2>
+                    <ul>
+                        <li> <p3><b>Delivery Services:</b>We understand the importance of convenience in today's fast-paced world. That's why we offer reliable delivery services straight to your doorstep. Simply place your order online, and our team will ensure your groceries are delivered promptly and efficiently.</p3></li>
+                        <li><p4><b>Catering:</b> Planning a party or event? Let Prime Grocery handle the catering for you! Our experienced chefs can create mouthwatering dishes and platters tailored to your preferences, leaving you free to enjoy your special occasion without any hassle.</p4></li>
+                        <li><p5><b>Party Planning:</b> From birthdays to weddings, our party planning services have you covered. Our dedicated team will work with you to bring your vision to life, handling everything from venue selection to decor and entertainment, ensuring a memorable and stress-free event.</p5></li>
+                        <li><p6><b>Online Ordering:</b>Skip the lines and shop from the comfort of your home with our easy-to-use online ordering platform. Browse our extensive selection, add items to your cart, and enjoy the convenience of doorstep delivery-it's shopping made simple!</p6></li>
+                        <li><p7><b>Loyalty Program:</b>We believe in rewarding our loyal customers. Join our loyalty program to earn points with every purchase, unlock exclusive discounts, and enjoy special perks as a valued member of the Prime Grocery family.</p7></li>
+                    </ul>
+                <p8>At Prime Grocery, we are committed to providing exceptional products, services, and experiences that exceed your expectations. Whether you're stocking up on essentials for the week or planning a special celebration, we're here to serve you.</p8>
+                <hr class="Line-Seperation ">        
+            </div>      
+       </section>
+       <section class="Branch-Images">
+            <h1><strong>Branches</strong></h1>
+            <ol>
+                <li><h3>Colombo</h3></li>
+                    <img class="CMB-Branch-Img" src="Photos/Branch Photos/Branch1.jpg" alt="Colombo Branch"><br>
+                    <br>
+                    <div class="Colombo-Branch-Section">
+                        <iframe  class="Colombo-Map-Link" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d506978.00417330104!2d79.2514876890625!3d6.9185953!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ae2596d3cb8fe07%3A0x2b0ae2edd563a661!2sAsia%20Pacific%20Institute%20of%20Information%20Technology%20(APIIT)!5e0!3m2!1sen!2slk!4v1714109951358!5m2!1sen!2slk"></iframe>
+                        <p1 class="CMB-Branch-Message">Welcome to our prestigious supermarket, a trailblazer in the center of the busy streets of Colombo. Since the beginning, we have dedicated ourselves to giving our clients the best possible quality and convenience. As the first supermarket in the city, we've established the benchmark for quality in retail by providing a wide range of goods that are specifically designed to satisfy the various demands of our energetic neighborhood. We are still recognized as the mainstay of Colombo shopping thanks to our history of innovation and client delight. Enter our store to join us on this historic voyage.</p1>
+                    </div>
+                    <li><h3>Kandy</h3></li>
+                    <img class="Kandy-Branch-Img" src="Photos/Branch Photos/Branch2.jpg" alt="KandyBranch"><br>
+                    <br>
+                    <div class="Kandy-Branch-Section">
+                        <iframe class="Kandy-Map-Link" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15830.584391809452!2d80.6200415!3d7.2810475!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ae3673f5e22ab3b%3A0xcbaef11262bec73!2sAPIIT%20Kandy%20Campus!5e0!3m2!1sen!2slk!4v1714109569791!5m2!1sen!2slk"></iframe>
+                        <p2 class="Kandy-Branch-Message">Explore the charm of our second location, which carries on the tradition of our original store in Colombo and is tucked away in the charming city of Kandy. Encircled by verdant hills and the distinct cultural allure of the area, our Kandy location provides a sophisticated retail encounter within stunning surroundings. As soon as you enter our store, you'll discover a carefully chosen assortment of high-end goods made to satisfy the various demands of our discriminating clientele. With the same commitment to convenience and quality that characterizes our brand, we cordially invite you to visit our Kandy location and take part in a unique shopping experience.</p2>
+                    </div>   
+            </ol>
+       </section>
+       <section class="Summary-Table-content">
+            <hr class="Line-Seperation">
+            <h1><strong>Summary Table</strong></h1>
+            <table>
+                <tr>
+                    <th>Services</th>
+                    <th>Description</th>
+                    <th>Availability</th>      
+                </tr>
+                <tr>
+                    <td>Delivery</td>
+                    <td>We offer convenient delivery services to your doorstep, ensuring you get your groceries on time.</td>
+                    <td>Monday-Sunday</td>
+                </tr>
+                <tr>
+                    <td>Catering</td>
+                    <td>Let us handle your event catering needs, from small gatherings to large parties and events.</td>
+                    <td>By appointment only</td>
+                </tr>
+                <tr>
+                    <td>Party Planning</td>
+                    <td>Our experienced team can assist you in planning and organizing your special events and parties.</td>
+                    <td>Available upon request</td>
+                </tr>
+                <tr>
+                    <td>Online Ordering</td>
+                    <td>Shop from the comfort of your home with our user-friendly online ordering platform.</td>
+                    <td>24/7</td>
+                </tr>
+                <tr>
+                    <td>Loyalty Program</td>
+                    <td>Join our loyalty program to earn rewards, discounts, and exclusive offers with every purchase.</td>
+                    <td>Ongoing</td>
+                </tr>       
+            </table>
+    </section>  
+  </main>
+  <footer>
             <!--Here in the footer tag i have used 'P' instead of using the heading tag which is 'H1, H2 ,H3 & etc', the reason for that is because
             once i use a 'H' tag by default a padding gets added around the text so that the length of the footer and the design gets cluttered even though
             i try to specify the height. so i have use 'p' tags which are usually being used to pharagraphs but i assigned classes indiviually for those 
