--- a/Vegetables.html
+++ b/Vegetables.html
@@ -23,12 +23,13 @@
                 </ul>
             </li>
             <li><a href="Order Page.html"">Order Page</a></li>
-            <li><a href="">Loyalty Registration</a></li>
+            <li><a href="Loyalty_Registration.html">Loyalty Registration</a></li>
             </ul>
         </nav>   
         <a class="Purchse-Button" href="Order Page.html">Purchase Items</a>      
   </header> 
-  <section class="Exotic-Import-Section">
+  <main>
+    <section class="Exotic-Import-Section">
         <div class="Vegetable-Page-Alignment">
             <h2 class="Exotic-Import-Heading">Exotic Import Section</h2>
             <p>Embark on a culinary journey with our Exotic Imports section, where we bring the world's diverse flavors to your table. From vibrant tropical produce to rare finds from distant lands, these exotic vegetables add excitement and variety to your meals, allowing you to explore new tastes and cuisines.</p>
@@ -44,8 +45,8 @@
             </div>
             <hr class="Vegetable-Page-Content-line-Seperation">
         </div>
- </section>
- <section class="Fresh-Produce-Section-Veg">
+    </section>
+    <section class="Fresh-Produce-Section-Veg">
         <div class="Vegetable-Page-Alignment">
             <h2 class="Fresh-Produce-Heading">Fresh Produce Section</h2>
             <p>Greetings from our fresh produce department. Here you will discover a colorful selection of in-season veggies that we obtain from reliable vendors.</p>
@@ -67,8 +68,8 @@
             </div> 
             <hr class="Vegetable-Page-Content-line-Seperation">
         </div>
-  </section>
- <section class="Seasonal-Specialties-Section">
+   </section>
+    <section class="Seasonal-Specialties-Section">
         <div class="Vegetable-Page-Alignment">
             <h2 class="Seasonal-Specialties-Heading">Seasonal Specialties</h2>
             <p>Embark on a culinary journey with our Exotic Imports section, where we bring the world's diverse flavors to your table. From vibrant tropical produce to rare finds from distant lands, these exotic vegetables add excitement and variety to your meals, allowing you to explore new tastes and cuisines.</p>
@@ -92,8 +93,8 @@
                     <p>Step into the autumn harvest with our exquisite pumpkins, the iconic symbol of the season's bounty. Grown with care and expertise, our pumpkins boast vibrant hues and rich, earthy flavors that embody the essence of fall. Whether you're carving jack-o'-lanterns for Halloween, baking delectable pies, or crafting hearty soups and stews, our pumpkins are the perfect addition to your autumn culinary repertoire. Packed with vitamins, fiber, and wholesome goodness, these versatile gourds offer not only culinary delights but also a touch of seasonal magic. Embrace the spirit of the harvest and elevate your autumn festivities with our exceptional pumpkins, available now at your neighborhood grocery supermarket.</p>
                     <h3>Pumpkin (300g)<br>Rs.70<br><br><a class="Buybutton" href="Order Page.html">Buy Now</a></h3>
                 </div>
-        </div>
- </section>
+            </div>
+    </section>
   <footer>
             <!--Here in the footer tag i have used 'P' instead of using the heading tag which is 'H1, H2 ,H3 & etc', the reason for that is because
             once i use a 'H' tag by default a padding gets added around the text so that the length of the footer and the design gets cluttered even though
@@ -156,6 +157,9 @@
                 </div>
                 </div>
         </div>  
+
+  </main>
+  
  </footer>   
 </body>
 </html>
