Designed the tiers in Loyalty pages and made few other design changes

--- a/Loyalty_Registration.html
+++ b/Loyalty_Registration.html
@@ -29,7 +29,55 @@
         <a class="Purchse-Button" href="Order Page.html">Purchase Items</a>      
    </header>
    <main>
-</main>
+    <section class="Loyalty-Page-Section-1">
+        <div class="Tier-Alignment">
+            <h2> Discover Our Exclusive Loyalty Tiers & Rewards</h2>
+            <p>Embark on a journey of exclusive rewards with our loyalty program tiers. From Silver to Platinum, each tier unlocks a treasure trove of benefits designed to enhance your shopping experience. Whether it's earning points with every purchase, enjoying special discounts, or receiving personalized perks, there's something special waiting for every loyal customer. Join now and elevate your shopping experience with us!</p>
+            <div class="Loyalty-Introduction">
+                <div class="Silver" >
+                        <h3 class="Silver-Tier-Heading">Sliver Tier</h3>
+                        <h4>Silver Benefits</h4>
+                        <ul>
+                            <li>Points Accumulation</li>
+                            <li>Exclusive Weekly Deals</li>    
+                            <li>Birthday Discount</li>
+                            <li>Free Delivery</li>   
+                            <li>Early Access to Sales</li>  
+                        </ul>
+                </div>
+                <div class="Gold" >
+                        <h3 class="Gold-Tier-Heading">Gold Tier</h3>
+                        <h4>Gold Benefits</h4>
+                        <ul>
+                            <li>Accelerated Points Earning</li>
+                            <li>VIP Customer Service</li>    
+                            <li>Exclusive Product Previews</li>
+                            <li>Double Points Day</li>   
+                            <li>Special Event Invitations</li>  
+                        </ul>
+                </div>
+                <div class="Platinum" >
+                    <h3 class="Platinum-Tier-Heading">Platinum Tier</h3>
+                    <h4>Platinum Benefits</h4>
+                    <ul>
+                        <li>Triple Points Earning</li>
+                        <li>Personal Shopper Service</li>    
+                        <li>Customized Offers</li>
+                        <li>Complimentary Gift Basket</li>   
+                        <li>Priority Access</li>  
+                    </ul>
+                </div
+            </div>
+        </div>
+    </section>
+    <section class="Tier-Detail">
+        <div class="Tier-Alignment">
+            <h3>Explore Prime Grocers Loyalty Tiers</h3>
+
+        </div>
+
+    </section>
+    
 
 
 
